@@ -9,6 +9,12 @@
 	SEL selector;
 }
 - (void) collect: (int) doc score: (float) score;
+
+/* LuceneKit: 
+ * Implement -collect:score: in the classes which use LCHitCollector
+ * and assign target and selector.
+ * This is a work-around for in-class subclass in Java.
+ */
 - (void) setTarget: (id) target;
 - (void) setSelector: (SEL) selector;
 - (id) target;
