@@ -44,6 +44,8 @@ LuceneKit_Search_OBJC_FILES = \
 ifeq ($(test), yes)
 LuceneKit_Search_OBJC_FILES += \
 	TestSetNorm.m \
+	TestDocBoost.m \
+	TestBooleanQuery.m \
 	TestSimilarity.m
 endif
 
